[package]
name = "selab"
version = "0.1.0"
edition = "2021"
description = "SELinux Assistant - Interactive TUI management tool with rollback capability"
keywords = ["selinux", "security", "tui", "administration"]
categories = ["command-line-utilities", "system-administration"]
[dependencies]
ratatui = "0.23"
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
lazy_static = "1.4"
anyhow = "1.0"
thiserror = "1.0"
regex = "1.0"
tempfile = "3.8"
libc = "0.2"
users = "0.11"
nix = "0.27"
sysinfo = "0.29"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
indicatif = "0.17"
[dev-dependencies]
tempfile = "3.8"
[features]
default = []
simulation = []
